# SporeBG-Conid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: config.json
cmake/: SDL.cmake  ThirdParty.cmake
src/: main.cpp
src/app/: GameApplication.cpp
src/core/: Board.cpp  Board.h  ComponentManager.cpp  ComponentManager.h  ConnectedComponentManager.cpp  ConnectedComponentManager.h  CoreData.h  DebugManager.cpp  DebugManager.h  Game.cpp  Game.h  GameApplication.cpp  GameApplication.h  GameTypes.h  Piece.cpp  Piece.h  Rule.cpp  Rule.h  Time.cpp  Time.h  WindowManager.cpp  WindowManager.h  testcore.cpp
src/game/: Board.cpp  Board.h  ComponentManager.cpp  ComponentManager.h  GameSession.cpp  GameSession.h  GameTypes.h  Piece.cpp  Piece.h  Rule.cpp
src/graphics/: BoardRenderer.h  CoordinateConverter.cpp  CoordinateConverter.h  GameRenderer.cpp  GameRenderer.h
src/graphics/font/: BitmapFont.cpp  BitmapFont.h  FontManager.cpp  FontManager.h  TextRenderer.cpp  TextRenderer.h  Textstyle.h
src/graphics/game/: BoardRenderer.cpp  BoardRenderer.h  CoordinateConverter.cpp  CoordinateConverter.h
src/graphics/texture/: TextureManager.cpp  TextureManager.h
src/graphics/ui/: UIRenderer.cpp  UIRenderer.h
src/input/: InputManager.cpp  InputManager.h  InputState.h
src/network/: NetData.h  NetworkManager.cpp  NetworkManager.h
src/network/client/: Client.cpp  Client.h
src/network/server/: GameServer.cpp  GameServer.h
src/scenes/base/: Scene.h  SceneEvent.h  SceneManager.cpp  SceneManager.h
src/scenes/gameplay/: GameScene.cpp  GameScene.h  OnlineGameScene.cpp  OnlineGameScene.h
src/scenes/menu/: MainMenuScene.cpp  MainMenuScene.h
src/scenes/other/: BadAppleScene.cpp  BadAppleScene.h
src/ui/: BoardRenderer.cpp  Render.cpp  Render.h  UIType.h
src/ui/base/: IUIManager.h  UIComponent.h  UIRenderData.h  UIWidgetFactory.h
src/ui/components/: Button.cpp  Button.h  Label.cpp  Label.h
src/ui/managers/: GameUIManager.cpp  GameUIManager.h  MainMenuUIManager.cpp  MainMenuUIManager.h  OnlineGameUIManager.cpp  OnlineGameUIManager.h
src/ui/managers/debug/: DebugData.h  DebugOverlay.cpp  DebugOverlay.h
src/utils/: Config.h  ConfigLoader.cpp  ConfigLoader.h  CoordinateTools.cpp  CoordinateTools.h  Tools.h
